<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/account_preferences">

        <PreferenceScreen
            android:title="@string/title_user_profile"
            android:summary="@string/summary_user_profile">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.ding.zhenshuai.myruns_2"
                android:targetClass="com.ding.zhenshuai.myruns_2.ProfileActivity"
            />
        </PreferenceScreen>

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/privacy_setting"
            android:summary="@string/summary_privacy_setting" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/additional_settings">

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_unit_preference"
            android:summary="@string/summary_unit_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/dialog_title_unit_preference" />

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/title_comment"
            android:summary="@string/course_suggestion"
            android:dialogTitle="@string/dialog_title_comment" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/misc">
        <PreferenceScreen
            android:title="@string/title_class_homepage"
            android:summary="@string/summary_class_homepage">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.cs.dartmouth.edu/~campbell/" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>